--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
   "version": "1.0.0",
   "description": "Bloq.io website.",
   "private": true,
-  "scripts": {
-    "build": "npm-run-all build:*",
-    "build:css": "node-sass scss/main.scss > public/css/main.css",
-    "postinstall": "npm run build",
-    "start": "node server.js",
-    "watch": "npm-run-all --parallel watch:*",
-    "watch:css": "nodemon -e scss -w scss -x npm run build:css"
-  },
   "dependencies": {
     "async": "^1.5.2",
     "bcrypt-nodejs": "^0.0.3",
@@ -34,19 +26,22 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
     "grunt": "latest",
+    "grunt-babel": "^6.0.0",
     "grunt-browser-sync": "latest",
-    "grunt-contrib-sass": "latest",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-cssmin": "latest",
-    "grunt-newer": "latest",
+    "grunt-contrib-sass": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
+    "grunt-newer": "latest",
+    "grunt-postcss": "^0.8.0",
     "grunt-sass-globbing": "latest",
-    "time-grunt": "latest",
-    "babel-preset-es2015": "^6.24.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-postcss": "^0.8.0"
+    "pixrem": "^4.0.1",
+    "time-grunt": "latest"
   },
   "engines": {
     "node": "6.1.0"
